--- a/FAQ.html
+++ b/FAQ.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/faq.css">
     <link rel="stylesheet" href="Css/header.css">
-    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="Css/nav.css">
     <link rel="stylesheet" href="Css/footer.css">
     <title>FAQ's</title>
 </head>
