--- a/cart.html
+++ b/cart.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/cart.css">
+    <link rel="stylesheet" href="Css/cart.css">
     <link rel="stylesheet" href="Css/header.css">
-    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="Css/nav.css">
     <link rel="stylesheet" href="Css/footer.css">
     <title>Cart </title>
 </head>
