--- a/index.html
+++ b/index.html
@@ -226,6 +226,6 @@
     </footer>
     <script src="Js/home.js"></script>
     <script src="Js/loading(universal).js"></script>
-    <script src="js/main.js"></script>
+    <script src="Js/main.js"></script>
 </body>
 </html>
