--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="Css/nav.css">
     <link rel="stylesheet" href="Css/footer.css">
     <link rel="stylesheet" href="Css/header.css">
     <link rel="stylesheet" href="Css/policy.css">
