--- a/shop.html
+++ b/shop.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/shop.css">
+    <link rel="stylesheet" href="Css/shop.css">
     <link rel="stylesheet" href="Css/header.css">
-    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="Css/nav.css">
     <link rel="stylesheet" href="Css/footer.css">
     <title>Shop </title>
 </head>
@@ -261,6 +261,6 @@
             </div>
         </div>
     </footer>
-    <script src="js/shop.js"></script>
+    <script src="Js/shop.js"></script>
 </body>
 </html>
